Fix cover picture size on mobile

--- a/style.css
+++ b/style.css
@@ -60,7 +60,8 @@ a {
 }
 
 .cover {
-    height: 100%;
+    max-height: 100%;
+    max-width: 100%;
 }
 
 /* ********************PROJECTS******************** */
